Wrote section 5.1 (first draft)

--- a/Annual Review 2019 Report/OneYearReport 0.1.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.1.tex
@@ -227,7 +227,21 @@ There is a third direction following from the above two. In the event I spend so
 
 \subsection{Timeline and next steps} \label{ss:timel}
 %Timeline and focus from here
-AFTER OUTLINING THESE DIRECTIONS I WANNA SAY WHAT I WILL FOCUS ON IN THE NEXT 6-12 MONTHS AND GIVE A POSSIBLE TIMELINE FOR THE RESEARCH. SINCE THIS IS WHAT YOU ARE LIKELY MOST INTERESTED IN I THINK I MIGHT WANT TO START WITH MY IDEAS FOR THE INSTALLATION PROJECT AS I HAVE A GOOD NUMBER OF IDEAS TO IMPLEMENT, AND IT WOULD SERVE AS A GOOD TEST FOR THE SIMULATOR. WE CAN DISCUSS THIS MORE IN PERSON NEXT TIME. 
+%AFTER OUTLINING THESE DIRECTIONS I WANNA SAY WHAT I WILL FOCUS ON IN THE NEXT 6-12 MONTHS AND GIVE A POSSIBLE TIMELINE FOR THE RESEARCH. SINCE THIS IS WHAT YOU ARE LIKELY MOST INTERESTED IN I THINK I MIGHT WANT TO START WITH MY IDEAS FOR THE INSTALLATION PROJECT AS I HAVE A GOOD NUMBER OF IDEAS TO IMPLEMENT, AND IT WOULD SERVE AS A GOOD TEST FOR THE SIMULATOR. WE CAN DISCUSS THIS MORE IN PERSON NEXT TIME. 
+Since research is inherently exploratory and unpredictable, it is impossilbe to have a timeline set in stone. However, in this section I will sketch a possible timeline and outline what I will focus on from here, based on the previously mentioned directions. 
+
+My immediate focus will now move to the first direction discussed, that of the installation project. The plan is to focus on that for the next 6 months, and then review where to go from there. It is currently hard to say whether only following this direction will lead to a big and novel enough result for a PhD thesis. The individual components (uncertainty scheduling, aggregate scheduling, using net present value) have all been researched in the literature, but not in this combination. So the resulting model would be related to the models discussed in various papers, but their combination might be different enough to significantly transform the problem and its computability. The goal of the next 6 months is to do preliminary research in this direction and explore whether the new problem is far enough away from the existing literature. Depending on this result, a decision will be made whether to continue purely in this direction, or to shift to the third direction and include maintenance as well to create a general decision support tool, or to fully shift to the maintenance direction if the installation direction does not appear to be a valuable enough research area. 
+
+A possible timeline for this would be:
+
+\begin{itemize}
+	\item Year 2, first half: Finish basic simulator, design model for installation project, choose and implement optimisation algorithm for it
+	\item Year 2, second half:  Contact industry companies for realistic project data, run initial experiments, design basic model for maintenane research, adapt simulator for it
+	\item Year 3, first half: Run experiments with both installation and maintenance models, aim to combine them
+	\item Year 3, second half: Test various alternative optimisation algorithms, finalize writing up research. 
+\end{itemize}
+
+This is the scenario in which I combine the installation and maintenance directions. Unmentioned in this timeline is possibly writing a paper on each individual model, and continues work on writing my thesis. In the case where I focus on either of the directions the timeline will look similar just more focussed in either direction. 
 
 \pagebreak
 
